2023-02-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/groff.texi (Manipulating Filling and Adjustment): Say more
	about the consequences of a break.

	Fixes <https://savannah.gnu.org/bugs/?63777>.  Thanks to Dave
	Kemper for the report.

2023-02-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	[docs]: Re-re-christen 'ESCAPE_AMPERSAND' ('\&').  Now call it a
	{non-transparent} "dummy character".  Also rechristen
	'ESCAPE_RIGHT_PARENTHESIS', ('\)') as the "transparent dummy
	character"; it has no impact on sentence-ending detection.

	* doc/groff.texi:
	* doc/meref.me.in:
	* man/groff.7.man:
	* man/groff_diff.7.man:
	* man/roff.7.man:
	* src/preproc/refer/refer.1.man:
	* tmac/groff_man.7.man.in: Do it.

	Fixes <https://savannah.gnu.org/bugs/?62816>.  Thanks to Dave
	Kemper to the report and to the groff mailing list for the
	vigorous discussion.  I don't expect my solution to please
	everyone.

2023-02-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac: Add internal register `an*MR-URL-format` to
	select from a few known formats of man page hyperlink.  There
	are three known on macOS, and one used everywhere else.
	* tmac/man.local: Document this feature so macOS users can enjoy
	the OSC 8 hyperlink feature if their terminal application
	supports it.

	I hope that this feature will be a temporary measure while macOS
	implements support for the man page URL format used everywhere
	else in the world.

	Fixes <https://savannah.gnu.org/bugs/?63768>.  Thanks to John
	Gardner for the report, research, consultation, and testing.

2023-02-11  Deri James  <deri@chuzzlewit.myzen.co.uk>

	[BuildFoundries]: Fails if neither ghostcript nor URW fonts
	are installed.

	* font/devpdf/util/BuildFoundries.pl: When the change to hold
	paths in an array, rather than a delimited string (see commit
	4ae4aeb6555f4f16c28fcb03eb1f56577826054c), the FindGSpath
	subroutine should return a pointer to an empty array when the